# Tekno-Sim

./: .gitignore  README.md  TeknoSim_Master_Document.md
.antigravity/context/: gui_architecture_rules.md
.antigravity/gui/: package.json  tsconfig.json
.antigravity/gui/src/: Panel.tsx  index.tsx
.antigravity/skills/github-manager/: SKILL.md
.antigravity/skills/skeptic-duck/: SKILL.md
.antigravity/subagents/: chief-reporter.md  doc-manager.md  docker-architect.md  gnc-engineer.md  gui-developer.md  hardware-abstractor.md  hitl-specialist.md  isaac-sim-pilot.md  qa-tester.md  ros2-bridge-expert.md  skeptic-duck.md  vision-engineer.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  start_sidecar.sh
.github/workflows/: performance.yml
examples/: sancak.ipynb  tutorial.ipynb
scripts/: benchmark.py
teknosim_apps/templates/generic_uav_template/: CMakeLists.txt  README.md  package.xml
teknosim_apps/templates/generic_uav_template/config/: generic_controller.yaml
teknosim_apps/templates/generic_uav_template/launch/: competition.launch.py
teknosim_apps/templates/robot_arm_template/: CMakeLists.txt  README.md  package.xml
teknosim_apps/templates/robot_arm_template/config/: generic_controller.yaml
teknosim_apps/templates/robot_arm_template/launch/: competition.launch.py
teknosim_apps/templates/rover_template/: CMakeLists.txt  README.md  package.xml
teknosim_apps/templates/rover_template/config/: generic_controller.yaml
teknosim_apps/templates/rover_template/launch/: competition.launch.py
teknosim_apps/templates/sancak_hss_template/: CMakeLists.txt  README.md  package.xml
teknosim_apps/templates/sancak_hss_template/config/: generic_controller.yaml
teknosim_apps/templates/sancak_hss_template/launch/: competition.launch.py
teknosim_core/hardware_interfaces/emulator/: esp32_sim.py
teknosim_core/hardware_interfaces/teknosim_hardware_sitl_plugin/: CMakeLists.txt  package.xml  teknosim_hardware_sitl_plugin.xml
teknosim_core/hardware_interfaces/teknosim_hardware_sitl_plugin/include/teknosim_hardware_sitl_plugin/: sitl_hardware_interface.hpp
teknosim_core/hardware_interfaces/teknosim_hardware_sitl_plugin/src/: sitl_hardware_interface.cpp
teknosim_core/utils/: index.html  sidecar_server.py  start_sidecar.sh
tests/: test_heartbeat.py  test_sidecar.py
