<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_arm_template</name>
  <version>1.0.0</version>
  <description>Robotik Kol (Robot Arm) ROS 2 Paket Şablonu</description>
  <maintainer email="doc_manager@tekno.sim">Dokümantasyon Yöneticisi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>position_controllers</depend>
  <depend>joint_trajectory_controller</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
