<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sancak_hss_template</name>
  <version>1.0.0</version>
  <description>Sancak HSS (İnsansız Hava Sistemi - UAV) ROS 2 Paket Şablonu</description>
  <maintainer email="doc_manager@tekno.sim">Dokümantasyon Yöneticisi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>velocity_controllers</depend>
  <depend>position_controllers</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
